# BetAI

./: .gitignore  LICENSE  README.md  Struture_Overview.md  agent.py  application.py  example_agent.py  example_agent_moneyline.py  example_agent_spread.py  features.txt  requirements.txt
backend/: README.md
backend/core/betai/agents/: agent_v2.py
backend/core/betai/coordinators/: moneyline.py  spread.py
backend/core/betai/integrations/: odds_api.py  results_api.py
backend/core/betai/models/: __init__.py  logistic_regression.py  logistic_regression_moneyline.py  logistic_regression_spread.py  (+7 more)
backend/trained_models/: logistic_regression.pkl  naive_bayes.pkl  random_forest.pkl  random_forest_features.txt
backend/trained_models/spread/: lr_spread.pkl  nb_spread.pkl  rf_spread.pkl  rf_spread_features.txt
frontend/: README.md
frontend/streamlit_app/: app.py  app_demo.py  application.py
frontend/streamlit_app/lib/: api.py  session_state.py  utils.py
frontend/streamlit_app/views/: history.py  live_board.py  open_bets.py  paper_trading.py  recommendations.py  sidebar.py
models/: __init__.py  logistic_regression.py  models_train.py  models_train_moneyline.py  models_train_spread.py  naive_bayes.py  naive_bayes_moneyline.py  random_forest.py  random_forest_moneyline.py  random_forest_spread.py
odds-sdk/: README.md  pyproject.toml
odds-sdk/src/oddsapi/: __init__.py  client.py  errors.py  http.py  types.py
odds-sdk/tests/: __init__.py  test_client.py  test_types.py
odds-sdk/tests/fixtures/: odds.json  sports.json
scripts/: README.md  run.sh  setup.sh
